[project]
name = "yle-subtitle-dl"
dependencies = [
    "aiohttp",
    "aiohttp-retry",
    "dateparser",
]
requires-python = ">=3.10"
version = "0.dev20231112"
license = {text = "GPLv3+"}

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "types-dateparser",
]

[project.scripts]
yle-subtitle-dl = "yle_subtitle_dl.__main__:main"

[project.urls]
Homepage = "https://github.com/pekman/yle-subtitle-dl"
Source = "https://github.com/pekman/yle-subtitle-dl"
